kubernetes/apps/main/vpn/downloads-gateway/app/networkpolicy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: downloads-gateway-pod-gateway
  labels:
    app.kubernetes.io/name: pod-gateway
    app.kubernetes.io/instance: downloads-gateway
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: downloads-gateway
      app.kubernetes.io/name: downloads-gateway
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 1194
          protocol: UDP
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
    - to:
        - namespaceSelector: {}
